# TheQuests

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  CMakeLists.txt.in  README.md  TheQuestsServer.cpp  TheQuestsServer.h  main.cpp
backend/TheQuests/: CMakeLists.txt  user.txt
backend/TheQuests/cmake/: TargetCmake.cmake
backend/TheQuests/config/: application.ini  mongodb.ini
backend/TheQuests/controllers/: CMakeLists.txt  CardController.cpp  CardController.h  QuestController.cpp  QuestController.h  UserController.cpp  UserController.h
backend/TheQuests/helpers/: helpers.pro
backend/TheQuests/models/: cardcollection.cpp  cardcollection.h  cardlinkcollection.cpp  cardlinkcollection.h  historycollection.cpp  historycollection.h  historyitemcollection.cpp  historyitemcollection.h  models.pro  questcollection.cpp  questcollection.h  questresourcecollection.cpp  questresourcecollection.h  sessionscollection.cpp  sessionscollection.h  tokencollection.cpp  tokencollection.h  userscollection.cpp  userscollection.h
backend/TheQuests/models/mongoobjects/: cardcollectionobject.h  cardlinkcollectionobject.h  historycollectionobject.h  historyitemcollectionobject.h  questcollectionobject.h  questresourcecollectionobject.h  sessionscollectionobject.h  tokencollectionobject.h  userscollectionobject.h
backend/TheQuests/test/: TestCardController.cpp  TestQuestController.cpp  TestUserController.cpp
backend/TheQuests/test/card/: testcard.cpp  testcard.pro
backend/TheQuests/test/quest/: testquest.cpp  testquest.pro
backend/TheQuests/test/token/: testtoken.cpp  testtoken.pro
backend/TheQuests/test/users/: testusers.cpp  testusers.pro
backend/TheQuests/views/: CMakeLists.txt
backend/TheQuests/views/_src/: _src.pro
backend/controllers/: AbstractAction.h  AbstractController.cpp  AbstractController.h  CardController.cpp  CardController.h  Handler.h  NetworkHelper.h  NetworkUtils.cpp  NetworkUtils.h  RequestRouter.cpp  RequestRouter.h  UserInterruptHandler.h
backend/controllers/card/: CardController.cpp  CardController.h
backend/controllers/card/actions/: CardAddAction.cpp  CardAddAction.h  CardDoAnswerAction.cpp  CardDoAnswerAction.h  CardEditAction.cpp  CardEditAction.h  CardGetAction.cpp  CardGetAction.h  CardLinksUpsertAction.cpp  CardLinksUpsertAction.h  CardListAction.cpp  CardListAction.h  CardRemoveAction.cpp  CardRemoveAction.h
backend/controllers/quest/: QuestController.cpp  QuestController.h
backend/controllers/user/: UserController.cpp  UserController.h
backend/data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-2--4144468011254354269.wt  collection-7--4144468011254354269.wt  index-3--4144468011254354269.wt  index-8--4144468011254354269.wt  sizeStorer.wt
backend/data/db/diagnostic.data/: metrics.2018-11-01T13-02-31Z-00000  metrics.interim
backend/src/: CMakeLists.txt
backend/src/card/controller/: CardController.cpp  CardController.h
backend/src/card/model_manager/: CardLinkModelManager.cpp  CardLinkModelManager.h  CardModelManager.cpp  CardModelManager.h
backend/src/config/: Config.h
backend/src/controllers/: AbstractController.cpp  AbstractController.h  AbstractRequestRouter.cpp  AbstractRequestRouter.h  NetworkHelper.h  NetworkUtils.cpp  NetworkUtils.h  RuntimeUtils.h  UserInterruptHandler.h
backend/src/controllers/card/: CardController.cpp  CardController.h  CardRouter.cpp  CardRouter.h
backend/src/controllers/quest/: QuestController.cpp  QuestController.h  QuestRouter.cpp  QuestRouter.h
backend/src/controllers/user/: UserController.cpp  UserController.h  UserRouter.cpp  UserRouter.h
backend/src/core/: CMakeLists.txt
backend/src/core/controller/: AbstractController.cpp  AbstractController.h
backend/src/core/model_manager/: ModelManager.cpp  ModelManager.h
backend/src/engine/: CMakeLists.txt
backend/src/engine/connections/: Connection_singleton.cpp  Connection_singleton.h  DatabaseConnectionSingleton.cpp  DatabaseConnectionSingleton.h
backend/src/history/model_manager/: HistoryModelManager.cpp  HistoryModelManager.h
backend/src/quest/controller/: QuestController.cpp  QuestController.h
backend/src/quest/model_manager/: QuestModelManager.cpp  QuestModelManager.h
backend/src/session/model_manager/: SessionModelManager.cpp  SessionModelManager.h
backend/src/storage/: CMakeLists.txt  CMakeLists1.txt
backend/src/storage/models/: CardModel.cpp  CardModel.h  UserModel.cpp  UserModel.h
backend/src/user/controller/: UserController.cpp  UserController.h
backend/src/user/model_manager/: UserModelManager.cpp  UserModelManager.h
backend/src/utils/controller/: Handler.h  MicroService.h  NetworkUtils.cpp  NetworkUtils.h  UserInterruptHandler.h
backend/src/utils/converters/: ConvertNlohmannToWebJSON.cpp  ConvertNlohmannToWebJSON.h
backend/src/utils/decorators/abstract_decorator/: AbstractDecorator.cpp  AbstractDecorator.h
backend/src/utils/decorators/login_required/: LoginRequiredDecorator.cpp  LoginRequiredDecorator.h
backend/src/utils/decorators/required_args/: RequiredArgsDecorator.cpp  RequiredArgsDecorator.h
backend/src/utils/model_manager/: DataManager.cpp  DataManager.h
backend/tests/card/model_manager/: CardLinkModelManagerTests.cpp  CardModelManagerTests.cpp
backend/tests/controllers/: CardControllerTest.cpp
backend/tests/history/model_manager/: HistoryModelManagerTests.cpp
backend/tests/quest/model_manager/: QuestModelManagerTests.cpp
backend/tests/session/model_manager/: SessionModelManagerTests.cpp
backend/tests/storage/models/: CardTest.cpp
backend/tests/user/model_manager/: UserModelManagerTests.cpp
backend/treefrog-framework-1.22.0/TheQuests/config/: application.ini
backend/treefrog-framework-1.22.0/TheQuests/controllers/: controllers.pro
frontend/TheQuests/: TheQuests.pro  db.js  js.qrc  main.cpp  main.qml  qml.qrc
frontend/TheQuests/qml/: main.qml
frontend/TheQuests/qml/components/: BackgroundCardGradient.qml  CardHeading.qml  CardToolbar.qml
frontend/TheQuests/src/: main.cpp
frontend/TheQuests/src/config/: apiurls.h  network.cpp  network.h  (+3 more)
(+148 files in other folders)
